# PythonTrading

./: .env  .gitignore  README.md  main.py  polygon_graphic.py  pyproject.toml  trade.py
autoexit/: main.py  main.tcss
autoexit/pages/: dashboard.py  welcome.py
autoexit/traders/: __init__.py  service.py
autoexit/widgets/: __init__.py  topbar.py
src/: main.py
src/pages/: __init__.py  dashboard.py  welcome.py
src/traders/: alphavantage.py
