[tool.poetry]
name = "autoexit"
version = "0.1.0"
description = "Trading algo for forex or potentially US stocks/futures with Python"
authors = ["Joseph Thurlow <joseph.thurlow7d0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.79.1"
requests = "^2.32.3"
rich = "^13.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
